# CppHttpDemo

./: CMakeLists.txt  README.md  build.sh
common/: CMakeLists.txt  functions.h  mongoose.c  mongoose.h  winini.cpp  winini.example.cpp  winini.h
database/: regedit.ini
httpclient/: CMakeLists.txt  http_client.cpp  http_client.h  main.cpp
httpserver/: CMakeLists.txt  http_server.cpp  http_server.h  main.cpp
httpserver/web/: index.html
